srcs/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: nginx
            servicePort: 80
        - path: /wordpress/
          backend:
            serviceName: wordpress
            servicePort: 5050
        - path: /phpmyadmin/
          backend:
            serviceName: phpmyadmin
            servicePort: 5000
